fix(month): `day-height` ignored because of css
This is a breaking change. Use the property `day-min-height` to fix Month calendars that don't look proper after this change is applied.

--- a/ui/src/css/calendar-month.sass
+++ b/ui/src/css/calendar-month.sass
@@ -73,7 +73,6 @@
       display: flex
       flex-direction: row
       flex-wrap: nowrap
-      flex: 10000 1 0%
       overflow: hidden
       min-width: 100%
       transition: height 0.3s
